--- a/a1.html
+++ b/a1.html
@@ -8,5 +8,10 @@
 <body>
     <h1>MY WEB</h1>
     <hl></hl>
+    <video width="320" height="240" controls>
+  <source src="https://www.bilibili.com/video/BV1dy411v7YW?t=2.5" type="video/mp4">
+  <source src="https://www.bilibili.com/video/BV1dy411v7YW?t=2.5" type="video/ogg">
+  您的浏览器不支持 HTML5 video 标签。
+</video>
 </body>
 </html>
