--- a/a1.html
+++ b/a1.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="stylesheet" type="text/css" href=""
     <title>Document</title>
 </head>
 <body>
     <h1>MY WEB</h1>
     <hl></hl>
-    <video width="320" height="240" controls>
-  <source src="https://cn-gddg-ct-01-15.bilivideo.com/upgcxcode/93/06/1616940693/1616940693-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1721221968&gen=playurlv2&os=bcache&oi=17627301&trid=000033ed51fcd9d047598692773f28da1c6dh&mid=0&platform=html5&og=hw&upsig=9800b84d2a40881207243fe25578a8f3&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=61315&bvc=vod&nettype=0&f=h_0_0&bw=58048&logo=80000000" type="video/mp4">
-  <source src="https://cn-gddg-ct-01-15.bilivideo.com/upgcxcode/93/06/1616940693/1616940693-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1721221968&gen=playurlv2&os=bcache&oi=17627301&trid=000033ed51fcd9d047598692773f28da1c6dh&mid=0&platform=html5&og=hw&upsig=9800b84d2a40881207243fe25578a8f3&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=61315&bvc=vod&nettype=0&f=h_0_0&bw=58048&logo=80000000" type="video/ogg">
-  您的浏览器不支持 HTML5 video 标签。
-</video>
+   // <video width="320" height="240" controls>
+ // <source src="https://cn-gddg-ct-01-15.bilivideo.com/upgcxcode/93/06/1616940693/1616940693-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1721221968&gen=playurlv2&os=bcache&oi=17627301&trid=000033ed51fcd9d047598692773f28da1c6dh&mid=0&platform=html5&og=hw&upsig=9800b84d2a40881207243fe25578a8f3&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=61315&bvc=vod&nettype=0&f=h_0_0&bw=58048&logo=80000000" type="video/mp4">
+ // <source src="https://cn-gddg-ct-01-15.bilivideo.com/upgcxcode/93/06/1616940693/1616940693-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1721221968&gen=playurlv2&os=bcache&oi=17627301&trid=000033ed51fcd9d047598692773f28da1c6dh&mid=0&platform=html5&og=hw&upsig=9800b84d2a40881207243fe25578a8f3&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=61315&bvc=vod&nettype=0&f=h_0_0&bw=58048&logo=80000000" type="video/ogg">
+ // 您的浏览器不支持 HTML5 video 标签。
+//</video>
 </body>
 </html>
