--- a/a1.html
+++ b/a1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" type="text/css" href=""
+    <link  rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/lgtlyh/myweb/main/2.css">
     <title>Document</title>
 </head>
 <body>
