--- a/a1.html
+++ b/a1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/lgtlyh/myweb/main/2.css">
-    <title>Document</title>
+    <title>公文</title>
 </head>
 <body>
-    <h1>MY WEB</h1>
+    <h1>我的网站</h1>
     <hl></hl>
     <p>叶芬清：13970789435</p>
     <p>赖祥月：15970900481</p>
