--- a/a1.html
+++ b/a1.html
@@ -1,12 +1,97 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/lgtlyh/myweb/main/2.css">
-    <title>公文</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="icon" href="http://gips0.baidu.com/it/u=1640072233,1230501354&fm=3042&app=3042&f=JPEG&wm=1,huayi,0,0,13,9&wmo=0,0&w=512&h=512" type="image/x-icon">
+
+<title>Hi!</title>
+
+	<script>
+      new Vue({
+        el: "#title",
+        data: {
+          message: "Hello world"
+        }
+      })
+	</script>
+
+
+
+
+
+
+
+
+<style>
+
+
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 20px;
+        margin: 0;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #0d1117;
+        font-weight: bold;
+    }
+    .typing-effect {
+        white-space: pre;
+        
+        width: 100%;
+        max-width: 95%;
+        margin: 1 auto;
+        padding: 2px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: #151b23;
+        color:#9198a1;
+    }
+    @keyframes typing {
+        from { width: 0; }
+        to { width: 100%; }
+    }
+    @keyframes blink {
+        from, to { opacity: 1; }
+        50% { opacity: 0; }
+    }
+</style>
 </head>
+
 <body>
-    <h1>我的网站</h1>
+<a href="p/1.png">图片1</a>
+<a href="p/2.png">图片2</a>
+<a href="p/3.png">图片3</a>
+<a href="p/1.apk">软件</a>
+<a href="https://z9.haohaoxz.com/app/202401/elsb_118044.apk?tk=eJIoMgIQOEMMNQNEIMOIIAOMNwcIMwZIIVcJMEMQLFaIIoOINcOIf=y3jxzsnij3z2jzzsmijsnij2yiy6Cii6ms2fT4D0mwysnijxz4TzQ=">Ehviewer</a>
+<div class="typing-effect">
+你好<br>
+    这是一个测试页<br>
+</div>
+<br>
+
+<script>
+    // 使用JavaScript动态添加内容
+    const typingEffect = document.querySelector('.typing-effect');
+    const text = typingEffect.textContent;
+    typingEffect.textContent = '';
+
+    let i = 0;
+    const type = () => {
+        if (i < text.length) {
+            typingEffect.textContent += text.charAt(i);
+            i++;
+            setTimeout(type, 100);
+        } else {
+            // 打印完文字后停止动画
+            const blinkElement = typingEffect.querySelector('.blink');
+            blinkElement.style.animation = 'none';
+        }
+    };
+    type();
+</script>
 </body>
 </html>
+ 
