--- a/a1.html
+++ b/a1.html
@@ -1,31 +1,14 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" href="http://gips0.baidu.com/it/u=1640072233,1230501354&fm=3042&app=3042&f=JPEG&wm=1,huayi,0,0,13,9&wmo=0,0&w=512&h=512" type="image/x-icon">
-
+<link rel="icon" href="http://gips0.baidu.com/it/u=1640072233,1230501354&fm=3042&app=3042&f=JPEG&wm=1,huayi,0,0,13,9&wmo=0,0&w=512&h=512" type="image/x-icon">
 <title>Hi!</title>
 
-	<script>
-      new Vue({
-        el: "#title",
-        data: {
-          message: "Hello world"
-        }
-      })
-	</script>
-
-
-
-
-
-
-
+<script src="https://unpkg.com/vue@3"></script> <!-- Import Vue 3 -->
 
 <style>
-
-
     body {
         font-family: Arial, sans-serif;
         text-align: center;
@@ -66,32 +49,22 @@
 <a href="p/3.png">图片3</a>
 <a href="p/1.apk">软件</a>
 <a href="https://z9.haohaoxz.com/app/202401/elsb_118044.apk?tk=eJIoMgIQOEMMNQNEIMOIIAOMNwcIMwZIIVcJMEMQLFaIIoOINcOIf=y3jxzsnij3z2jzzsmijsnij2yiy6Cii6ms2fT4D0mwysnijxz4TzQ=">Ehviewer</a>
-<div class="typing-effect">
+<div id="app" class="typing-effect">
 你好<br>
     这是一个测试页<br>
 </div>
 <br>
 
 <script>
-    // 使用JavaScript动态添加内容
-    const typingEffect = document.querySelector('.typing-effect');
-    const text = typingEffect.textContent;
-    typingEffect.textContent = '';
+    const { createApp } = Vue;
 
-    let i = 0;
-    const type = () => {
-        if (i < text.length) {
-            typingEffect.textContent += text.charAt(i);
-            i++;
-            setTimeout(type, 100);
-        } else {
-            // 打印完文字后停止动画
-            const blinkElement = typingEffect.querySelector('.blink');
-            blinkElement.style.animation = 'none';
+    createApp({
+        data() {
+            return {
+                message: "Hello world"
+            };
         }
-    };
-    type();
+    }).mount('#app');
 </script>
 </body>
 </html>
- 
